--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "goit-react-hw-02-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://marta-pryiom.github.io/goit-react-hw-02-phonebook",
+  "homepage": "https://marta-pryiom.github.io/goit-react-hw-03-image-finder",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
+    "basiclightbox": "^5.0.4",
     "pnotify": "^5.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "shortid": "^2.2.16",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
